# data-exp-vis-2024

./: .gitignore  HowToSubmitAnAssignment.html  HowToSubmitAnAssignment.ipynb  HowToSubmitAnAssignment.md  README.md
Assignments/A-Image_Exploration/: Readme
Assignments/Application/: Create_an_application.ipynb
Assignments/Image_Exploration/: Ex-1A-ImageSegmentation.ipynb  Ex-1B-ImageSegmentation.ipynb  Ex-2A-Sudoku.ipynb  Ex-2B-AnalysingVideoStream.ipynb  Readme
Lectures/HTTP-REST-API/: 01-HTTP_protocol_REST_services.ipynb  Chatgpt_generated.ipynb  Chatgpt_generated.py  Ex-01-REST-API-basics.ipynb  Ex-02-REST-API-wdata.ipynb  Ex-03-REST-bokeh-embed.ipynb  bokeh-embed.html  preview-nb-api.sh  pyproject.toml
Lectures/HTTP-REST-API/data/: Globalco2emissions-original.csv
Lectures/Interactive_Visualization/: 01-Technology_FurtherReadings.ipynb  pyproject.toml  streamlit_example.py
Lectures/Interactive_Visualization/Interactivity_within_HTML_Bokeh/: interact_file_bokeh.ipynb  interact_file_bokeh_hover.html  interact_file_bokeh_js_callbacks.html  interact_file_bokeh_linking.html
Lectures/Interactive_Visualization/Interactivity_within_HTML_HV/: hv_int.html
Lectures/Interactive_Visualization/Streamlit_example_using_poetry/: HowToRunStreamlit
Lectures/Interactive_Visualization/data/: scatter-water-gas.html
Lectures/L-LargeData/: 01-Working-with-large-datasets.ipynb  02-Pandas-reduce-data-size.ipynb  03-Dask_tutorial.ipynb  04-Dask-distributed.ipynb  Datashader-01-Pipeline.ipynb  Datashader-02-Interactivity.ipynb  Datashader-03-Networks.ipynb  pyproject.toml
(+81 files in other folders)
