[tool.poetry]
name = "l-largedata"
version = "0.1.0"
description = ""
authors = ["jegesm <david.visontai@ttk.elte.hu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
datashader = "^0.16.1"
numpy = "^1.26.4"
collection = "^0.1.6"
ipykernel = "^6.29.4"
dask-expr = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
